<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Car_servActivity!</string>
    <string name="app_name">Car servis</string>
    <string name="button_add_new">Dodaj nowy</string>
    <string name="choose_value">Wybierz typ</string>
    <string name="delete_dialog_text">Usunąć?</string>
    <string name="import_dialog_text">Zaimportować?</string>
    <string name="export_dialog_text">Wykonać kopię?</string>
    <string name="btn_dialog_ok_label">OK</string>
    <string name="btn_dialog_cancel_label">Anuluj</string>
    <string name="import_positive_confirmation">Zaimportowano</string>
    <string name="export_positive_confirmation">Kopia utworzona</string>
    
    <string name="type">Typ</string>
    <string name="note">Notatka</string>
    <string name="mileage">Przebieg</string>
    <string name="date">Termin</string>
    <string name="button_ok_label">OK</string>
    <string name="other">Inne</string>
    <string name="add_date">Data</string>
    
    <string name="canceled">Anulowano</string>
    <string name="deleted">Usunięto</string>
    <string name="no_internet_connection">Brak połączenia do Internetu</string>
    <string name="connection_error_update_local">Błąd połączenia\nZaktualizowano lokalną bazę danych</string>
    <string name="updated_local_db">Zaktualizowano lokalną bazę danych</string>
    <string name="alarm_set_on">Alarm ustawiono na</string>
    <string name="edit">Edytuj</string>
    <string name="import_entries">Import</string>
    <string name="export_entries">Export</string>
    
    <string-array name="entry_types"> 							<!-- Tablica stringow -->
        <item >Inne</item>
        <item >Akumulator</item>
        <item >Filtr paliwa</item>
        <item >Filtr powietrza</item>
        <item >Filtr pyłków</item>        
        <item >Klimatyzacja</item>
        <item >Olej</item>
        <item >Opony</item>
        <item >Płyn hamulcowy</item>
        <item >Przewywomierz</item>        
        <item >Rozrząd</item>
    </string-array>    

</resources>