<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:onClick="onAddNewEntry"
        android:text="@string/button_add_new" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        android:paddingLeft="10.0sp"
        android:paddingRight="10.0sp"
        android:paddingTop="10.0sp" >
    </ListView>

    <!--
    ScrollView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp" 
        android:layout_weight="1"
        >

        <LinearLayout
            android:id="@+id/lista_entrysow"
            android:layout_width="fill_parent"
            android:layout_height="0dp" 
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView
    -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sortByDate"
            android:text="@string/add_date" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sortByMileage"
            android:text="@string/mileage" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sortByExpired"
            android:text="@string/date" />
    </LinearLayout>

</LinearLayout>